# tauri_android_bug

./: README.md  dev_notes.md  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Bookshelf.svelte  TopBar.svelte
src/routes/: +page.svelte
